Fixed menu Test z-index

--- a/css/rdecor.css
+++ b/css/rdecor.css
@@ -17,9 +17,6 @@ font-size: 250%;
 font-weight: bold;
 text-align: center;
 padding: 30px 5px;
-display:grid;
-grid-column: 1 / 3;
-grid-row:1;
 }
 /*-------------------------------------------------HOME SECTION------------------------------------------------------------*/
 section#home {
@@ -28,8 +25,9 @@ section#home {
     position:relative;
     top:0;
     bottom:0;
+	width:100%;
     height: 100vh;
-	z-index: -10;
+	z-index:100;
 }
 
 #bg-overlay {
@@ -38,7 +36,7 @@ section#home {
     bottom:0;
     height: 100%;
     width:100%;
-    z-index: -5;
+    z-index: 95;
     background-color: rgba(0, 0, 0, 0.1);
 } 
 
@@ -46,7 +44,12 @@ header {
 background-color: #e5e5e4;  
 box-shadow: 0 4px 4px -2px #43424a;
 display:grid;
+width:100%;
 grid-template-columns: /*fit-content(25%)*/ auto  auto;
+position:fixed;
+top:0;
+left:0;
+z-index:9999;
 }
 
 #logo {
@@ -87,6 +90,10 @@ grid-template-rows: auto auto auto;
 max-width:100%;
 height: 100vh;
 margin: 10px auto;
+position:relative;
+top:0;
+left:0;
+z-index:1;
 }
 
 section#about h1 {
@@ -170,6 +177,7 @@ grid-template-rows: 18% 27% 27% 27%;
 max-width:100%;
 height: 100vh;
 margin: 10px auto;
+position:relative;
 }
 
 section#gallery h1 {
